--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,8 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Yashashav DK
+title: "Yashashav DK"
+subtitle: "Observations of a mortal skeptic."
 email: ydk61999@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Observations of a mortal skeptic.
