--- a/_config.yml
+++ b/_config.yml
@@ -66,7 +66,7 @@ author:
       #url: "https://"
     - label: "Twitter"
       icon: "fab fa-fw fa-twitter-square"
-      url: "https://twitter.com/ImaginSsypusHpy"
+      url: "https://twitter.com/dk_yashashav"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
       url: "https://github.com/Yashashav"
@@ -78,7 +78,7 @@ footer:
   links:
     - label: "Twitter"
       icon: "fab fa-fw fa-twitter-square"
-      url: "https://twitter.com/ImaginSsypusHpy"
+      url: "https://twitter.com/dk_yashashav"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
       url: "https://github.com/Yashashav"
